--- a/events.html
+++ b/events.html
@@ -96,7 +96,7 @@
         function showMenu(){
             navLinks.style.right = "0";
         }
-        function showMenu(){
+        function hideMenu(){
             navLinks.style.right = "-200px";
         }
 
