--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
         function showMenu(){
             navLinks.style.right = "0";
         }
-        function showMenu(){
+        function hideMenu(){
             navLinks.style.right = "-200px";
         }
 
